--- a/docs/docs/cmd/spo/tenant/tenant-site-get.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-site-get.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # spo tenant site get
 
-Retrieves the tenant site information
+Retrieves information of a specific site as admin
 
 ## Usage
 
@@ -328,7 +328,7 @@ m365 spo tenant site get --url "https://contoso.sharepoint.com/sites/Marketing"
   <TabItem value="Markdown">
 
   ```md
-  # spo tenant site get --debug "false" --verbose "false" --id "fa05c425-7a0b-4624-ba34-f9dc22ef7663"
+  # spo tenant site get --id "fa05c425-7a0b-4624-ba34-f9dc22ef7663"
 
   Date: 6/8/2025
 
