--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,7 +4,9 @@ sidebar_position: 4
 
 # Release notes
 
-## v10.9.0 (beta)
+## [v10.9.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.9.0)
+
+### New commands
 
 **Viva:**
 
