Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,20 @@ sidebar_position: 4
 
 # Release notes
 
+## v10.10.0 (beta)
+
+### New commands
+
+**SharePoint:**
+
+- [spo page control remove](../cmd/spo/page/page-control-remove.mdx) - removes a control from a modern page [#6770](https://github.com/pnp/cli-microsoft365/issues/6770)
+
+### Changes
+
+- Enhanced `spo page` commands to use `spo.ts` util functions [#6621](https://github.com/pnp/cli-microsoft365/issues/6621)
+- Added support for documenting minimal permissions [#6705](https://github.com/pnp/cli-microsoft365/pull/6705)
+- Added minimal permissions to docs pages [#4399](https://github.com/pnp/cli-microsoft365/issues/4399)
+
 ## [v10.9.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.9.0)
 
 ### New commands
