--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -14,9 +14,13 @@ sidebar_position: 4
 
 ### Changes
 
-- Enhanced `spo page` commands to use `spo.ts` util functions [#6621](https://github.com/pnp/cli-microsoft365/issues/6621)
-- Added support for documenting minimal permissions [#6705](https://github.com/pnp/cli-microsoft365/pull/6705)
-- Added minimal permissions to docs pages [#4399](https://github.com/pnp/cli-microsoft365/issues/4399)
+- enhanced `spo page` commands to use `spo.ts` util functions [#6621](https://github.com/pnp/cli-microsoft365/issues/6621)
+- added support for documenting minimal permissions [#6705](https://github.com/pnp/cli-microsoft365/pull/6705)
+- added minimal permissions to docs pages [#4399](https://github.com/pnp/cli-microsoft365/issues/4399)
+- fixed setting sitelogo and sitethumbnail from another site [#6689](https://github.com/pnp/cli-microsoft365/issues/6689)
+- fixed docs styling [#6762](https://github.com/pnp/cli-microsoft365/issues/6762)
+- fixed app permission add fails when service principal not found [#6289](https://github.com/pnp/cli-microsoft365/issues/6289)
+- fixed bug where Zod validation errors display additional colons [#6789](https://github.com/pnp/cli-microsoft365/issues/6789)
 
 ## [v10.9.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.9.0)
 
@@ -28,12 +32,12 @@ sidebar_position: 4
 
 ### Changes
 
-- Removed Node.JS 18 support [#6707](https://github.com/pnp/cli-microsoft365/pull/6707)
-- Added Alpine 3.20 image to Dockerfile [#6648](https://github.com/pnp/cli-microsoft365/issues/6648)
-- Fixed Docker image completion [#6718](https://github.com/pnp/cli-microsoft365/issues/6718)
-- Removed links to GitHub wiki
-- Fixed spo page commands to handle emphasis and vertical sections [#6708](https://github.com/pnp/cli-microsoft365/issues/6708)
-- Aligned `--with` and `--include` options [#6574](https://github.com/pnp/cli-microsoft365/issues/6574)
+- removed Node.JS 18 support [#6707](https://github.com/pnp/cli-microsoft365/pull/6707)
+- added Alpine 3.20 image to Dockerfile [#6648](https://github.com/pnp/cli-microsoft365/issues/6648)
+- fixed Docker image completion [#6718](https://github.com/pnp/cli-microsoft365/issues/6718)
+- removed links to GitHub wiki
+- fixed spo page commands to handle emphasis and vertical sections [#6708](https://github.com/pnp/cli-microsoft365/issues/6708)
+- aligned `--with` and `--include` options [#6574](https://github.com/pnp/cli-microsoft365/issues/6574)
 
 ## [v10.8.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.8.0)
 
@@ -72,13 +76,13 @@ sidebar_position: 4
 - added login through federated identity for Azure Devops [#6649](https://github.com/pnp/cli-microsoft365/issues/6649)
 - fixed setup command app creation [#6720](https://github.com/pnp/cli-microsoft365/issues/6720)
 - fixed problem with [spo page section add](../cmd/spo/page/page-section-add.mdx) command [#6701](https://github.com/pnp/cli-microsoft365/issues/6701)
-- Migrated 'adaptivecard send' to Zod
-- Migrated 'app' commands to Zod
-- Migrated 'booking business get' to Zod
-- Migrated 'context remove' to Zod
-- Migrated 'context option remove' to Zod
-- Enhanced [spo list get](../cmd/spo/list/list-get.mdx) command with ability to get the default list of a site [#5856](https://github.com/pnp/cli-microsoft365/issues/5856)
-- Added documentation about [handling errors in PowerShell](../user-guide/using-cli.mdx#handling-errors-in-powershell) [#6664](https://github.com/pnp/cli-microsoft365/pull/6664)
+- migrated 'adaptivecard send' to Zod
+- migrated 'app' commands to Zod
+- migrated 'booking business get' to Zod
+- migrated 'context remove' to Zod
+- migrated 'context option remove' to Zod
+- enhanced [spo list get](../cmd/spo/list/list-get.mdx) command with ability to get the default list of a site [#5856](https://github.com/pnp/cli-microsoft365/issues/5856)
+- added documentation about [handling errors in PowerShell](../user-guide/using-cli.mdx#handling-errors-in-powershell) [#6664](https://github.com/pnp/cli-microsoft365/pull/6664)
 
 ## [v10.7.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.7.0)
 
