Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -8,6 +8,10 @@ sidebar_position: 4
 
 ### New commands
 
+**Entra ID:**
+
+- [entra organization set](../cmd/entra/organization/organization-set.mdx) - Updates info about the organization [#6581](https://github.com/pnp/cli-microsoft365/issues/6581)
+
 **SharePoint:**
 
 - [spo page control remove](../cmd/spo/page/page-control-remove.mdx) - removes a control from a modern page [#6770](https://github.com/pnp/cli-microsoft365/issues/6770)
@@ -21,6 +25,8 @@ sidebar_position: 4
 - fixed docs styling [#6762](https://github.com/pnp/cli-microsoft365/issues/6762)
 - fixed app permission add fails when service principal not found [#6289](https://github.com/pnp/cli-microsoft365/issues/6289)
 - fixed bug where Zod validation errors display additional colons [#6789](https://github.com/pnp/cli-microsoft365/issues/6789)
+- enhanced 'spo list view add' with extra types [#6735](https://github.com/pnp/cli-microsoft365/issues/6735)
+- updated `spo page section add` command with Flexible section [#6742](https://github.com/pnp/cli-microsoft365/issues/6742)
 
 ## [v10.9.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.9.0)
 
