Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -18,15 +18,16 @@ sidebar_position: 4
 
 ### Changes
 
-- enhanced `spo page` commands to use `spo.ts` util functions [#6621](https://github.com/pnp/cli-microsoft365/issues/6621)
 - added support for documenting minimal permissions [#6705](https://github.com/pnp/cli-microsoft365/pull/6705)
 - added minimal permissions to docs pages [#4399](https://github.com/pnp/cli-microsoft365/issues/4399)
+- enhanced `spo page` commands to use `spo.ts` util functions [#6621](https://github.com/pnp/cli-microsoft365/issues/6621)
+- enhanced [spo list view add](../cmd/spo/list/list-view-add.mdx) with extra types [#6735](https://github.com/pnp/cli-microsoft365/issues/6735)
+- updated [spo page section add](../cmd/spo/page/page-section-add.mdx) command with Flexible section [#6742](https://github.com/pnp/cli-microsoft365/issues/6742)
 - fixed setting sitelogo and sitethumbnail from another site [#6689](https://github.com/pnp/cli-microsoft365/issues/6689)
 - fixed docs styling [#6762](https://github.com/pnp/cli-microsoft365/issues/6762)
 - fixed app permission add fails when service principal not found [#6289](https://github.com/pnp/cli-microsoft365/issues/6289)
 - fixed bug where Zod validation errors display additional colons [#6789](https://github.com/pnp/cli-microsoft365/issues/6789)
-- enhanced 'spo list view add' with extra types [#6735](https://github.com/pnp/cli-microsoft365/issues/6735)
-- updated `spo page section add` command with Flexible section [#6742](https://github.com/pnp/cli-microsoft365/issues/6742)
+- fixed command [spo homesite remove](../cmd/spo/homesite/homesite-remove.mdx) to work with multiple home sites [#6491](https://github.com/pnp/cli-microsoft365/issues/6491)
 
 ## [v10.9.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.9.0)
 
