--- a/docs/docs/cmd/spo/homesite/homesite-set.mdx
+++ b/docs/docs/cmd/spo/homesite/homesite-set.mdx
@@ -20,7 +20,21 @@ m365 spo homesite set [options]
 
 `--vivaConnectionsDefaultStart [vivaConnectionsDefaultStart]`
 : When set to `true`, the Viva Connections landing experience is set to the SharePoint home site. If set to `false`, the Viva Connections home experience will be used.
-```
+
+`--draftMode [draftMode]` 
+: Set draft status. Valid values are: `true`, `false`.
+
+`--audienceIds [audienceIds]` 
+: Comma-separated list of M365 group Ids to set as audiences. Specify either `audienceIds` or `audienceNames`, but not both.
+
+`--audienceNames [audienceNames]` 
+: Comma-separated list of M365 group names to set as audiences. Specify either `audienceIds` or `audienceNames`, but not both.
+
+`--targetedLicenseType [TargetedLicenseType]` 
+: Value of either `everyone`, `frontLineWorkers` or `informationWorkers`.
+
+`--vivaConnectionsDefaultStart [vivaConnectionsDefaultStart]`
+: Specifies whether the home site is the default start for Viva Connections. Accepts `true` or `false`.
 
 <Global />
 
@@ -52,6 +66,48 @@ Sets the Home site to the provided site collection url and sets the Viva Connect
 m365 spo homesite set --siteUrl https://contoso.sharepoint.com/sites/comms --vivaConnectionsDefaultStart false
 ```
 
+Disables the Home site viva connection experience
+
+```sh
+m365 spo homesite set -u https://contoso.sharepoint.com/sites/contosoportal  --draftMode false
+```
+
+Enables the Home site viva connection experience
+
+```sh
+m365 spo homesite set -u https://contoso.sharepoint.com/sites/contosoportal  --draftMode true
+```
+
+Set the audience to everyone
+
+```sh
+m365 spo homesite set -u https://contoso.sharepoint.com/sites/contosoportal  --TargetedLicenseType "everyone"
+```
+
+Set the audience to frontline workers
+
+```sh
+m365 spo homesite set -u https://contoso.sharepoint.com/sites/contosoportal  --TargetedLicenseType "frontLineWorkers"
+```
+
+Set the audience to information workers
+
+```sh
+m365 spo homesite set -u https://contoso.sharepoint.com/sites/contosoportal  --TargetedLicenseType "informationworkers"
+```
+
+Set the audience to M365 groups using M365 Groups Ids
+
+```sh
+m365 spo homesite set -u https://contoso.sharepoint.com/sites/contosoportal  --audienceIds "978b5280-4f80-47ea-a1db-b0d1d2fb1ba4,21af775d-17b3-4637-94a4-2ba8625277cb"
+```
+
+Set the audience to M365 groups using M365 Groups Names
+
+```sh
+m365 spo homesite set -u https://contoso.sharepoint.com/sites/contosoportal  --audienceNames "Marketing, IT department"
+```
+
 ## Response
 
 ### Standard response
@@ -60,63 +116,68 @@ m365 spo homesite set --siteUrl https://contoso.sharepoint.com/sites/comms --viv
   <TabItem value="JSON">
 
   ```json
-  "The Home site has been set to https://contoso.sharepoint.com. It may take some time for the change to apply. Check aka.ms/homesites for details."
+  {
+  "Audiences": [
+    {
+      "Email": "active@contoso.onmicrosoft.com",
+      "Id": "7a1eea7f-9ab0-40ff-8f2e-0083d9d63451",
+      "Title": "active Members"
+    }
+  ],
+  "IsInDraftMode": true,
+  "IsVivaBackendSite": false,
+  "SiteId": "431d7819-4aaf-49a1-b664-b2fe9e609b63",
+  "TargetedLicenseType": 2,
+  "Title": "The Landing",
+  "Url": "https://contoso.sharepoint.com/sites/TheLanding",
+  "VivaConnectionsDefaultStart": true,
+  "WebId": "626c1724-8ac8-45d5-af87-c07c752fab75"
+  }
   ```
 
   </TabItem>
   <TabItem value="Text">
 
   ```text
-  The Home site has been set to https://contoso.sharepoint.com. It may take some time for the change to apply. Check aka.ms/homesites for details.
+  Audiences                  : [{"Email":"active@contoso.onmicrosoft.com","Id":"7a1eea7f-9ab0-40ff-8f2e-0083d9d63451","Title":"active Members"}]
+  IsInDraftMode              : true
+  IsVivaBackendSite          : false
+  SiteId                     : 431d7819-4aaf-49a1-b664-b2fe9e609b63
+  TargetedLicenseType        : 2
+  Title                      : The Landing
+  Url                        : https://contoso.sharepoint.com/sites/TheLanding
+  VivaConnectionsDefaultStart: true
+  WebId                      : 626c1724-8ac8-45d5-af87-c07c752fab75
   ```
 
   </TabItem>
   <TabItem value="CSV">
 
   ```csv
-  The Home site has been set to https://contoso.sharepoint.com. It may take some time for the change to apply. Check aka.ms/homesites for details.
+  IsInDraftMode,IsVivaBackendSite,SiteId,TargetedLicenseType,Title,Url,VivaConnectionsDefaultStart,WebId
+  1,0,431d7819-4aaf-49a1-b664-b2fe9e609b63,2,The Landing,https://contoso.sharepoint.com/sites/TheLanding,1,626c1724-8ac8-45d5-af87-c07c752fab75
   ```
 
   </TabItem>
   <TabItem value="Markdown">
 
   ```md
-  The Home site has been set to https://contoso.sharepoint.com. It may take some time for the change to apply. Check aka.ms/homesites for details.
-  ```
+  # spo homesite set --debug "false" --verbose "false" --siteUrl "https://contoso.sharepoint.com/sites/TheLanding" --vivaConnectionsDefaultStart "true" --audienceNames "active"
 
-  </TabItem>
-</Tabs>
+  Date: 7/27/2025
 
-### `vivaConnectionsDefaultStart` response
+  ## The Landing (https://contoso.sharepoint.com/sites/TheLanding)
 
-When we make use of the option `vivaConnectionsDefaultStart` the response will differ. 
-
-<Tabs>
-  <TabItem value="JSON">
-
-  ```json
-  "The Home site has been set to https://contoso.sharepoint.com and the Viva Connections default experience to True. It may take some time for the change to apply. Check aka.ms/homesites for details."
-  ```
-
-  </TabItem>
-  <TabItem value="Text">
-
-  ```text
-  The Home site has been set to https://contoso.sharepoint.com and the Viva Connections default experience to True. It may take some time for the change to apply. Check aka.ms/homesites for details.
-  ```
-
-  </TabItem>
-  <TabItem value="CSV">
-
-  ```csv
-  The Home site has been set to https://contoso.sharepoint.com and the Viva Connections default experience to True. It may take some time for the change to apply. Check aka.ms/homesites for details.
-  ```
-
-  </TabItem>
-  <TabItem value="Markdown">
-
-  ```md
-  The Home site has been set to https://contoso.sharepoint.com and the Viva Connections default experience to True. It may take some time for the change to apply. Check aka.ms/homesites for details.
+  Property | Value
+  ---------|-------
+  IsInDraftMode | true
+  IsVivaBackendSite | false
+  SiteId | 431d7819-4aaf-49a1-b664-b2fe9e609b63
+  TargetedLicenseType | 2
+  Title | The Landing
+  Url | https://contoso.sharepoint.com/sites/TheLanding
+  VivaConnectionsDefaultStart | true
+  WebId | 626c1724-8ac8-45d5-af87-c07c752fab75
   ```
 
   </TabItem>
