Apply suggestions from code review

--- a/docs/docs/user-guide/azuredevops-pipeline.mdx
+++ b/docs/docs/user-guide/azuredevops-pipeline.mdx
@@ -158,7 +158,7 @@ Creating a new pipeline in Azure DevOps is a one-time operation and then every t
 
 ![Azure DevOps Navigation](../images/azure-devops-pipeline-tutorial/ado-menu.png)
 
-Next in the top right corner of the page click on the `New pipline` button. After that, follow the for by selecting the location of your repo, next the branch on which the YAML file is present, and then select the option to create a new pipeline based on `Existing Azure Pipelines YAML file`
+Next in the top right corner of the page click the `New pipeline` button. After that, follow the form by selecting the location of your repo, next the branch on which the YAML file is present, and then select the option to create a new pipeline based on `Existing Azure Pipelines YAML file`
 
 ![Azure DevOps create pipeline steps](../images/azure-devops-pipeline-tutorial/ado-pipeline-manual-steps.png)
 
