Removes viva engage group commands. Closes #6285

--- a/docs/docs/v10-upgrade-guidance.mdx
+++ b/docs/docs/v10-upgrade-guidance.mdx
@@ -185,9 +185,9 @@ v9 command | v10 command
 `spo folder rename` | [spo folder set](./cmd/spo/folder/folder-set.mdx)
 `spo site rename` | [spo tenant site rename](./cmd/spo/tenant/tenant-site-rename.mdx)
 `yammer search` | [viva engage search](./cmd/viva/engage/engage-search.mdx)
-`yammer group list` | [viva engage group list](./cmd/viva/engage/engage-group-list.mdx)
-`yammer group user add` | [viva engage group user add](./cmd/viva/engage/engage-group-user-add.mdx)
-`yammer group user remove` | [viva engage group user remove](./cmd/viva/engage/engage-group-user-remove.mdx)
+`yammer group list` | viva engage group list
+`yammer group user add` | viva engage group user add
+`yammer group user remove` | viva engage group user remove
 `yammer message add` | [viva engage message add](./cmd/viva/engage/engage-message-add.mdx)
 `yammer message get` | [viva engage message get](./cmd/viva/engage/engage-message-get.mdx)
 `yammer message list` | [viva engage message list](./cmd/viva/engage/engage-message-list.mdx)
