--- a/docs/docs/v6-upgrade-guidance.mdx
+++ b/docs/docs/v6-upgrade-guidance.mdx
@@ -383,10 +383,10 @@ pa solution reference add|`path`|`projectPath`
 [teams user app add](./cmd/teams/user/user-app-add.mdx)|`appId`|`id`
 [teams user app remove](./cmd/teams/user/user-app-remove.mdx)|`appId`|`id`
 [viva connections app create](./cmd/viva/connections/connections-app-create.mdx)|`appName`|`name`
-[yammer group user add](./cmd/viva/engage/engage-group-user-add.mdx)|`id`|`groupId`
-[yammer group user add](./cmd/viva/engage/engage-group-user-add.mdx)|`userId`|`id`
-[yammer group user remove](./cmd/viva/engage/engage-group-user-remove.mdx)|`id`|`groupId`
-[yammer group user remove](./cmd/viva/engage/engage-group-user-remove.mdx)|`userId`|`id`
+yammer group user add|`id`|`groupId`
+yammer group user add|`userId`|`id`
+yammer group user remove|`id`|`groupId`
+yammer group user remove|`userId`|`id`
 [yammer message like set](./cmd/viva/engage/engage-message-like-set.mdx)|`id`|`messageId`
 [yammer user get](./cmd/viva/engage/engage-user-get.mdx)|`userId`|`id`
 
