--- a/docs/docs/cmd/viva/engage/engage-community-user-add.mdx
+++ b/docs/docs/cmd/viva/engage/engage-community-user-add.mdx
@@ -36,6 +36,25 @@ m365 viva engage community user add [options]
 
 <Global />
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions               |
+  |-----------------|---------------------------|
+  | Microsoft Graph | GroupMember.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions               |
+  |-----------------|---------------------------|
+  | Microsoft Graph | GroupMember.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Add a single user specified by ID as a member to a community specified by display name.
