--- a/docs/docs/v11-upgrade-guidance.mdx
+++ b/docs/docs/v11-upgrade-guidance.mdx
@@ -1,6 +1,6 @@
 # v11 Upgrade Guidance
 
-The v11 release of CLI for Microsoft 365 introduces several breaking changes. To assist you in upgrading to the latest version, we’ve outlined the changes and the actions you may need to take.
+The v11 release of CLI for Microsoft 365 introduces several breaking changes. To assist you in upgrading to the latest version, we've outlined the changes and the actions you may need to take.
 
 ## SharePoint
 
@@ -12,3 +12,17 @@ The [spo homesite set](./cmd/spo/homesite/homesite-set.mdx) command has been upd
 
 - **For adding new home sites**: Use the new [spo homesite add](./cmd/spo/homesite/homesite-add.mdx) command instead
 - **For updating existing home sites**: Continue using [spo homesite set](./cmd/spo/homesite/homesite-set.mdx) as before with required option `siteUrl`.
+
+## General
+
+### Removed commands
+
+Some commands were removed because they used either undocumented APIs that required extra scope to be consented on the app registration or obsolete APIs.
+
+Read the documentation for alternative commands to find out how to use them and what permissions are required.
+
+Command | Alternative
+--- | ---
+`viva engage group list` | [viva engage community list](./cmd/viva/engage/engage-community-list.mdx)
+`viva engage group user add` | [viva engage community user add](./cmd/viva/engage/engage-community-user-add.mdx)
+`viva engage group user remove` | [viva engage community user remove](./cmd/viva/engage/engage-community-user-remove.mdx)
