--- a/docs/docs/cmd/viva/engage/engage-role-list.mdx
+++ b/docs/docs/cmd/viva/engage/engage-role-list.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # viva engage role list
 
-Retrieves the roles that can be assigned in Viva Engage
+Lists all Viva Engage roles
 
 ## Usage
 
@@ -24,6 +24,25 @@ This command is based on an API that is currently in preview and is subject to c
 
 :::
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                                           |
+  |-----------------|-------------------------------------------------------|
+  | Microsoft Graph | EngagementRole.Read.All, EngagementRole.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                                           |
+  |-----------------|-------------------------------------------------------|
+  | Microsoft Graph | EngagementRole.Read.All, EngagementRole.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
   
 List all Viva Engage roles
@@ -42,14 +61,6 @@ m365 viva engage role list
     {
       "id": "ec759127-089f-4f91-8dfc-03a30b51cb38",
       "displayName": "Network Admin"
-    },
-    {
-      "id": "966b8ec4-6457-4f22-bd3c-5a2520e98f4a",
-      "displayName": "Verified Admin"
-    },
-    {
-      "id": "77aa47ad-96fe-4ecc-8024-fd1ac5e28f17",
-      "displayName": "Corporate Communicator"
     }
   ]
   ```
@@ -61,8 +72,6 @@ m365 viva engage role list
   id                                    displayName
   ------------------------------------  ----------------------
   ec759127-089f-4f91-8dfc-03a30b51cb38  Network Admin
-  966b8ec4-6457-4f22-bd3c-5a2520e98f4a  Verified Admin
-  77aa47ad-96fe-4ecc-8024-fd1ac5e28f17  Corporate Communicator
   ```
 
   </TabItem>
@@ -71,8 +80,6 @@ m365 viva engage role list
   ```csv
   id,displayName
   ec759127-089f-4f91-8dfc-03a30b51cb38,Network Admin
-  966b8ec4-6457-4f22-bd3c-5a2520e98f4a,Verified Admin
-  77aa47ad-96fe-4ecc-8024-fd1ac5e28f17,Corporate Communicator
   ```
 
   </TabItem>
@@ -89,20 +96,6 @@ m365 viva engage role list
   ---------|-------
   id | ec759127-089f-4f91-8dfc-03a30b51cb38
   displayName | Network Admin
-
-  ## Verified Admin (966b8ec4-6457-4f22-bd3c-5a2520e98f4a)
-
-  Property | Value
-  ---------|-------
-  id | 966b8ec4-6457-4f22-bd3c-5a2520e98f4a
-  displayName | Verified Admin
-
-  ## Corporate Communicator (77aa47ad-96fe-4ecc-8024-fd1ac5e28f17)
-
-  Property | Value
-  ---------|-------
-  id | 77aa47ad-96fe-4ecc-8024-fd1ac5e28f17
-  displayName | Corporate Communicator
   ```
 
   </TabItem>
