--- a/docs/docs/cmd/spo/homesite/homesite-set.mdx
+++ b/docs/docs/cmd/spo/homesite/homesite-set.mdx
@@ -16,7 +16,7 @@ m365 spo homesite set [options]
 
 ```md definition-list
 `-u, --url <url>`
-: The URL of the home site
+: The URL of the site to set as Home site.
 
 `--draftMode [draftMode]` 
 : Set draft status. Valid values are: `true`, `false`.
