--- a/docs/docs/cmd/entra/group/group-member-add.mdx
+++ b/docs/docs/cmd/entra/group/group-member-add.mdx
@@ -14,13 +14,10 @@ m365 entra group member add [options]
 
 ```md definition-list
 `-i, --groupId [groupId]`
-: The ID of the Microsoft Entra group. Specify `groupId`, `groupDisplayName` or `groupName` but not multiple.
+: The ID of the Microsoft Entra group. Specify `groupId` or `groupName` but not both.
 
-`-n, --groupDisplayName [groupDisplayName]`
-: (deprecated. Use option `groupName` instead) The display name of the Microsoft Entra group. Specify `groupId`, `groupDisplayName` or `groupName` but not multiple.
-
-`--groupName [groupName]`
-: The display name of the Microsoft Entra group. Specify `groupId`, `groupDisplayName` or `groupName` but not multiple.
+`-n, --groupName [groupName]`
+: The display name of the Microsoft Entra group. Specify `groupId` or `groupName` but not both.
 
 `--ids [ids]`
 : (deprecated. Use option `userIds` instead) Microsoft Entra IDs of users. You can also pass a comma-separated list of IDs. Specify either `ids`, `userIds`,`userNames`, `subgroupIds`, or `subgroupNames` but not multiple.
@@ -61,12 +58,6 @@ Add multiple members specified by ID as members to a group specified by ID.
 
 ```sh
 m365 entra group member add --groupId a03c0c35-ef9a-419b-8cab-f89e0a8d2d2a --userIds "098b9f52-f48c-4401-819f-29c33794c3f5,f1e06e31-3abf-4746-83c2-1513d71f38b8" --role Member
-```
-
-Add a single member specified by UPN as an owner to a group specified by display name.
-
-```sh
-m365 entra group member add --groupDisplayName Developers --userNames john.doe@contoso.com --role Owner
 ```
 
 Add a single member specified by UPN as an owner to a group specified by group name.
