--- a/docs/docs/cmd/teams/chat/chat-member-add.mdx
+++ b/docs/docs/cmd/teams/chat/chat-member-add.mdx
@@ -26,13 +26,10 @@ m365 teams chat member add [options]
 : The role for the user to add. Valid values are: `owner`, `guest`. Defaults to `owner`.
 
 `--visibleHistoryStartDateTime [visibleHistoryStartDateTime]`
-: Include chat history until a certain point in time. Specify either `visibleHistoryStartDateTime`, `includeAllHistory`, `withAllHistory` or neither.
-
-`--includeAllHistory`
-: (deprecated. Use option `withChildTerms` instead) Include all chat history. Specify either `visibleHistoryStartDateTime`, `includeAllHistory`, `withAllHistory` or neither.
+: Include chat history until a certain point in time. Specify either `visibleHistoryStartDateTime`, `withAllHistory` or neither.
 
 `--withAllHistory`
-: Include all chat history. Specify either `visibleHistoryStartDateTime`, `includeAllHistory`, `withAllHistory` or neither.
+: Include all chat history. Specify either `visibleHistoryStartDateTime`, `withAllHistory` or neither.
 ```
 
 <Global />
