New command: m365 viva engage role list

--- a/docs/docs/cmd/viva/engage/engage-role-list.mdx
+++ b/docs/docs/cmd/viva/engage/engage-role-list.mdx
@@ -29,16 +29,16 @@ This command is based on an API that is currently in preview and is subject to c
 <Tabs>
   <TabItem value="Delegated">
 
-  | Resource        | Permissions                                           |
-  |-----------------|-------------------------------------------------------|
-  | Microsoft Graph | EngagementRole.Read.All, EngagementRole.ReadWrite.All |
+  | Resource        | Permissions             |
+  |-----------------|-------------------------|
+  | Microsoft Graph | EngagementRole.Read.All |
 
   </TabItem>
   <TabItem value="Application">
 
-  | Resource        | Permissions                                           |
-  |-----------------|-------------------------------------------------------|
-  | Microsoft Graph | EngagementRole.Read.All, EngagementRole.ReadWrite.All |
+  | Resource        | Permissions             |
+  |-----------------|-------------------------|
+  | Microsoft Graph | EngagementRole.Read.All |
 
   </TabItem>
 </Tabs>
@@ -70,7 +70,7 @@ m365 viva engage role list
 
   ```text
   id                                    displayName
-  ------------------------------------  ----------------------
+  ------------------------------------  -------------
   ec759127-089f-4f91-8dfc-03a30b51cb38  Network Admin
   ```
 
