New command: viva engage role member list

--- a/docs/docs/cmd/viva/engage/engage-role-member-list.mdx
+++ b/docs/docs/cmd/viva/engage/engage-role-member-list.mdx
@@ -37,16 +37,16 @@ This command is based on an API that is currently in preview and is subject to c
 <Tabs>
   <TabItem value="Delegated">
 
-  | Resource        | Permissions                           |
-  |-----------------|---------------------------------------|
-  | Microsoft Graph | EngagementRole.Read.All, EngagementRole.ReadWrite.All |
+  | Resource        | Permissions             |
+  |-----------------|-------------------------|
+  | Microsoft Graph | EngagementRole.Read.All |
 
   </TabItem>
   <TabItem value="Application">
 
-  | Resource        | Permissions                               |
-  |-----------------|-------------------------------------------|
-  | Microsoft Graph | EngagementRole.Read.All, EngagementRole.ReadWrite.All |
+  | Resource        | Permissions             |
+  |-----------------|-------------------------|
+  | Microsoft Graph | EngagementRole.Read.All |
 
   </TabItem>
 </Tabs>
