Enhancement: Ability to add sub groups using entra group member add

--- a/docs/docs/cmd/entra/group/group-member-add.mdx
+++ b/docs/docs/cmd/entra/group/group-member-add.mdx
@@ -87,10 +87,10 @@ Add multiple members (subgroups) specified by ID as members to a group specified
 m365 entra group member add --groupId a03c0c35-ef9a-419b-8cab-f89e0a8d2d2a --subgroupIds "098b9f52-f48c-4401-819f-29c33794c3f5,f1e06e31-3abf-4746-83c2-1513d71f38b8" --role Member
 ```
 
-Adds multiple members (subgroups) specified by name as owners to a group specified by ID.
+Adds multiple members (subgroups) specified by name as members to a group specified by ID.
 
 ```sh
-m365 entra group member add --groupId a03c0c35-ef9a-419b-8cab-f89e0a8d2d2a --subgroupNames "john.doe@contoso.com,adele.vance@contoso.com" --role Owner
+m365 entra group member add --groupId a03c0c35-ef9a-419b-8cab-f89e0a8d2d2a --subgroupNames "john.doe@contoso.com,adele.vance@contoso.com" --role Member
 ```
 
 ## Response
